# pico-retro-support

./: .gdbinit  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
layouts/: apple1.layout  bbc.layout  c64.layout  generic.layout  minimal.layout  spectrum.layout  zx81.layout
scripts/: setup.sh  write_ram.py
src/: font5x7.h  main.c  mem_layout.h  oled.c  oled.h  uart_log.h
